tests/errors/dim_float_02.f90
program main
	print *, sum([1, 2, 3], 1, 1.1)
end program